Changelog
=========

v0.0.12
=======

- Test project is now a NET Core/MSTest project.

v0.0.11
=======

Released on April 4, 2018.

- Use DisplayAttribute extra options for property Description and Prompt.

v0.0.10
=======

Released on March 27, 2018.

- Company 'user' properties now carry a Description attribute.
- Default value for FiscalProfile.IsVatExcluded = true.
- Default value for FiscalProfile.IsLegalEntity = true.
- Default value for Preferences.UnitOfMeasure = "N.".
- Add tests for the above default values
- Add NUnit3 test adapter so tests can actually run in VS.

v0.0.9
======

Released on March 21, 2018

- Add DisplayAttribute to Company.Logo 
- Fix DisplayAttribute for FiscalProfile.IsFreelance
- Fix DisplayAttribute for Preferences.MailSettings

v0.0.8
======

Released on March 20, 2018

- Company.IsLegalEntity moved to Company.FiscalProfile
- Company.IsVatExcluded moved to Company.FiscalProfile
- Company.Vat moved to Company.FiscalProfile
- Company.REACode moved to Company.FiscalProfile
- Company.SIACode moved to Company.FiscalProfile
- Company.Logo moved to Company.Preferences
- EmailAttachment renamed to MailSettings
- EmailAttachment.MessageBody moved to MailSettings.Template.MessageBody
- EmailAttachment.Username moved to MailSettings.Template.SmptUsername
- EmailAttachment.Password moved to MailSettings.Template.SmptPassword
- Add MailSettings.Template property
- New MailTemplate class

v0.0.7.1-alpha
============

Released on 16 February, 2018

- Add Display attribute for Company class.
- Add Resources.PropertyNames resx file.

v0.0.6
======

Released on 15 February, 2018

- Braking: rename BaseModel.ETag to Etag.
- Get rid of JsonProperties in BaseModel class, except for UniqueId.

v0.0.5
======

Released on 2 February, 2018

- Add Company.FiscalProfile.VatIdentificationNumber
- Add Company.FiscalProfile.TaxIdentificationNumber
- Remove leftover JsonProperty attributes (Documents)

v0.0.4
======

Released on 31 January, 2018
